# pypubsub

./: .gitignore  .landscape.yml  .readthedocs.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.txt  README_WxPython.txt  ez_setup.py  mypy_verification.py  py2and3.py  pyproject.toml  release.bat  release.py  release.txt  setup.py  test4_prov_module_actual.py  tox-cov.ini  tox.ini
.github/workflows/: ci.yml  release.yml
core/: imp2.py
core/kwargs/: datamsg.py
docs/: Makefile  about.rst  changelog.rst  conf.py  index.rst  index_redirect.php  installation.rst  make.bat  requirements.txt
docs/development/: dev_index.rst  publish_src_to_pypi.md  py2exe.rst  setup-cxfreeze.py  setup-py2exe.py  sphinx_patch1.txt  sphinx_patch2.txt  testpubsub.py
docs/usage/: core_classes.rst  helloworld.py  index.rst  module_pub.rst  module_utils.rst  reference.rst  setup_modules.rst  types_of_errors.rst  usage_advanced.rst  usage_advanced_debug.rst  usage_advanced_maintain.rst  usage_advanced_other.rst  usage_basic.rst  usage_basic_tasks.rst
examples/: multithreadloop.py  runall.bat  runall.sh  runall_regression.txt
examples/advanced/: README.txt  advanced_main.py  arg1_listeners.py  arg1_topics.py  arg1_topics_out.py  exchandle.py  kwargs_listeners.py  kwargs_senders.py  kwargs_topics.py  kwargs_topics_out.py  main_kwargs.py  notifhandle.py
examples/basic/: console_listeners.py  console_main.py  console_senders.py  wx_main.py  wx_win2.py
examples/basic_arg1/: README.txt  console_main.py  wx_main.py
examples/basic_kwargs/: README.txt  console_listeners.py  console_main.py  console_senders.py  wx_main.py  wx_win1.py  wx_win2.py
src/pubsub/: pub.py  (+4 more)
tests/: perf.py  perf_filter.py  profile10000Py27.txt  profile10000Py33.txt  py24.patch  py27and33compare.xlsx  readme.txt  runperf.bat  runtests.bat  test4_prov_module_actual.py
tools/: compare_timings.py  depgraph.py  depgraph2dot.py  deps.py  py2depgraph.py
utils/: xmltopicdefnprovider.py
(+64 files in other folders)
